csbot-backend/src/main/java/com/jhc/csbot/script_interpreter/test/resources/cases/abnormal/t3/t3.result
Syntax Error: [不是预期的词法, global 不是标识符] at line 1