csbot-backend/src/main/java/com/jhc/csbot/script_interpreter/test/resources/cases/abnormal/t3/t3.rsl
env global {
    package_name: "com.jhc.csbot.model.entity";
    class_name: "User";
}